--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -27,7 +27,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:orientation="horizontal">
 
             <TextView
@@ -54,5 +54,14 @@
             android:layout_marginBottom="20dp"
             android:scaleType="centerInside"
             app:imageBitmap = "@{stock.food.image}" />
+
+        <TextView
+            android:id="@+id/remain_date"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:textColor="@color/black"
+            android:layout_marginBottom="5dp"
+            android:gravity="center" />
     </LinearLayout>
 </layout>
