在庫管理画面の期限切れの食材の背景の色を薄赤にした

--- a/app/src/main/res/layout/stock_detail.xml
+++ b/app/src/main/res/layout/stock_detail.xml
@@ -59,7 +59,7 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:textColor="@color/black"
-                android:background="@drawable/editable_area"
+                android:background="@drawable/sm_editable_area"
                 android:inputType="number"
                 android:afterTextChanged="@{(s) -> viewModel.onQuantityChange(s)}" />
 
@@ -79,7 +79,7 @@
             android:gravity="top"
             android:textColor="@color/black"
             android:text="@{viewModel.note}"
-            android:background="@drawable/editable_area"
+            android:background="@drawable/sm_editable_area"
             android:hint="@string/sd_note"
             android:textColorHint="@color/black"
             android:inputType="textMultiLine"
