--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -14,6 +14,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical"
@@ -21,7 +22,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/editable_area"
+        android:background="@drawable/sm_editable_area"
         android:onClick="@{() -> viewModel.onStockItemClick(stock)}">
 
         <LinearLayout
