--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -16,7 +16,7 @@
     <LinearLayout
         android:id="@+id/background"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:orientation="vertical"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -62,7 +62,8 @@
             android:layout_height="0dp"
             android:layout_weight="0.25"
             android:textColor="@color/black"
-            android:layout_marginBottom="5dp"
-            android:gravity="center" />
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:layout_gravity="top"/>
     </LinearLayout>
 </layout>
