--- a/app/src/main/res/drawable/sm_close_item.xml
+++ b/app/src/main/res/drawable/sm_close_item.xml
@@ -9,7 +9,7 @@
 
     <item android:bottom="3.5dp" android:right="3.5dp">
         <shape>
-            <solid android:color="#F37167" />
+            <solid android:color="#FCAF17" />
             <corners android:radius="20dp" />
         </shape>
     </item>
